src/components/Collapse/Collapse.scss
.collapse-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 1023 px;
  height: auto;

  .collapse {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0px;
    padding: 0px 20px;
    border-radius: 5px;
    background-color: #ff6060;
    width: 1003px;
    height: 54px;
    color: white;
    font-weight: bold;
    font-size: 24px;

    img {
      transition: transform 0.3s ease-in-out;
    }

    &.open img {
      transform: rotate(180deg);
    }
  }

  .collapse__text {
    box-sizing: border-box;
    transform: translateY(0);
    animation: slideIn 1s ease-out;
    overflow: hidden;
    margin-top: 0px;
    padding: 20px 20px;
    width: 1043px; 
    white-space: pre-wrap;
    color: black;
    background-color: #f6f6f6 ;
    font-size: 20px;
    border-radius: 0px 0px 10px 10px;
  }
  @keyframes slidein {
    from {
      margin-top: 50%;
    }
  
    to {
      margin-bottom: 0%;
    }
  }

  &.open .collapse__text {
    transform: translateY(0);
    
  }
}

